# NeuralNetwork_Learning

./: .env  .gitignore  LICENSE  Makefile  README.md  main.py  mypy.ini  setup.cfg
.github/workflows/: ci.yml
src/: __init__.py  eval.py  layer.py  layerdiff.py  mnist_loader.py  network.py
src/activator/: __init__.py  base.py  relu.py  sigmoid.py  softmax.py
src/component/: __init__.py  adder.py  affine.py  multiplexer.py  relu.py  sigmoid.py  softmax_with_loss.py
src/lossfunc/: __init__.py  base.py  cross_entropy_error.py
src/optimizer/: __init__.py  base.py  sgd.py
tests/: __init__.py  test_Components.py  test_activators.py
