#
# setup configurations
#

[metadata]
name=nnlearning
version=0.1.0
description=Neural Networkの実装
long_description=「ゼロから始めるDeepLearning」を読みながら実装した Neural Networkのコード群.
license_files=["LICENSE"]
author=Enchan1207
author_email=enchant0130@gmail.com
url=https://github.com/Enchan1207/NeuralNetwork_Learning
include_package_data=True
zip_safe=False

[options]
package_dir=
    =src
packages=find:

install_requires =
    numpy >= 1.21.0
    python-dotenv >= 0.15.0

[options.packages.find]
where=src
